--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,8 @@
     <title>LISBAB</title>
     <link rel="icon" href="../assets/banco-de-alimentos-bogota.png">
 </head>
+<body>
+
 <header class="header">
     <nav class="nav-header">
         <a href="#" class="header-logo">
@@ -26,9 +28,35 @@
         <h2 id="lista2">Programas</h2>-->
     </nav>
 </header>
-<body>
+
+    <br><br><br><br><br>
+
     <main>
+        <h1>Laboratorio de Innovación Social</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam obcaecati incidunt recusandae vitae enim, voluptatibus placeat? Dicta doloribus hic soluta nulla cum atque temporibus eum odio, sed debitis accusamus.</p>
+    
         
     </main>
+
+    <div class="">
+        <h3></h3>
+
+        <p></p>
+    </div>
+
+    <div class="">
+        <h3></h3>
+
+        <p></p>
+    </div>
+
+    <div class="">
+        <h3></h3>
+
+        <p></p>
+    </div>
+
+    <section></section>
 </body>
 </html>
