--- a/html/index.html
+++ b/html/index.html
@@ -31,11 +31,16 @@
 
     <br><br><br><br><br>
 
-    <main>
-        <h1>Laboratorio de Innovación Social</h1>
-
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam obcaecati incidunt recusandae vitae enim, voluptatibus placeat? Dicta doloribus hic soluta nulla cum atque temporibus eum odio, sed debitis accusamus.</p>
-    
+    <main class="initial-info">
+        <div class="initial-info-div">
+            <div class="initial-info-portada">
+                <h1>Laboratorio de Innovación Social</h1>
+                <a href="#" class="header-logo">
+                <img  src=" " alt="imgP" class="principal-image">
+                </a>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam obcaecati incidunt recusandae vitae enim, voluptatibus placeat? Dicta doloribus hic soluta nulla cum atque temporibus eum odio, sed debitis accusamus.</p>
+            </div>    
+        </div>
         
     </main>
 
