--- a/html/index.html
+++ b/html/index.html
@@ -35,25 +35,29 @@
         <div class="initial-info-div">
             <div class="initial-info-portada">
                 <h1>Laboratorio de Innovación Social</h1>
-                <a href="#" class="header-logo">
-                <img  src=" " alt="imgP" class="principal-image">
+                <a href="#" class="principal-img">
+                <img  src="../assets/img-principal.png " alt="imgP" class="principal-img">
                 </a>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam obcaecati incidunt recusandae vitae enim, voluptatibus placeat? Dicta doloribus hic soluta nulla cum atque temporibus eum odio, sed debitis accusamus.</p>
+                <p class="hola">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error ullam obcaecati incidunt recusandae vitae enim, voluptatibus placeat? Dicta doloribus hic soluta nulla cum atque temporibus eum odio, sed debitis accusamus.</p>
             </div>    
         </div>
         
     </main>
 
     <div class="">
-        <h3></h3>
+        <h3>Desarrollo tecnologico</h3>
 
         <p></p>
+
+        <button class="info-btn-tec"></button>
     </div>
 
     <div class="">
-        <h3></h3>
+        <h3>Emprendimiento e Innovación</h3>
 
         <p></p>
+
+        <button class="info-btn-inn"></button>
     </div>
 
     <div class="">
