--- a/html/index.html
+++ b/html/index.html
@@ -101,7 +101,11 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi ipsum praesentium dicta illo voluptatem saepe porro dignissimos recusandae, sit voluptate perspiciatis incidunt laborum quidem, ratione tempora minima velit sint dolorum.</p>
             </div>
         </div>
-
+        <div class="conections">
+            <a href="" class="btn-conections facebook"><i href="icon-facebook"></i></a>
+            <a href="" class="btn-conections twitter"><i href="icon-twitter"></i></a>
+            <a href="" class="btn-conections gmail"><i href="icon-gmail"></i></a>
+        </div>
     </section>
     <br><br><br><br><br><br><br><br>
 </body>
