--- a/html/index.html
+++ b/html/index.html
@@ -82,7 +82,7 @@
             </div>
         
             <div class="seccion-banco">
-                <a href="https://www.bancodealimentos.org.co/" class="banco-icon">
+                <a href="#" class="banco-icon">
                 <img src="../assets/Logo-icon-BAB.png" alt="img-banco" class="link-banco">
                 </a>
             </div>
@@ -111,6 +111,26 @@
 </body>
 <footer>
 
-
+    <div class="footer-body">
+        <div class="footer-banco">
+                <a href="https://www.bancodealimentos.org.co/" class="-footer-banco-icon">
+                <img src="../assets/Logo-icon-BAB.png" alt="img-banco" class="footer-link-banco">
+                </a>
+            </div>
+        <div class="footer-uni">
+            <a href="https://www.unilibre.edu.co/" class="footer-uni-icon">
+            <img src="../assets/logo-universidad-libre.jpg" alt="img-banco" class="footer-link-uni">
+            </a>
+        </div>
+        <div clas="social-icon-container">
+            <a href="" class="btn-conections facebook"><i href="#"></i></a>
+            <a href="" class="btn-conections twitter"><i href="#"></i></a>
+            <a href="" class="btn-conections gmail"><i href="#"></i></a>
+        </div>
+        <ul class="footer-menu-container">
+            <li class="menu-item">legal</li>
+            <li class="menu-item">cookies</li>
+            <li class="menu-item">privacy</li>
+        </ul>
 </footer>
 </html>
