--- a/html/index.html
+++ b/html/index.html
@@ -102,7 +102,6 @@
             </div>
         </div>
         <div class="conections">
-            <a href="" class="btn-conections facebook"><i href="icon-facebook"></i></a>
             <a href="" class="btn-conections twitter"><i href="icon-twitter"></i></a>
             <a href="" class="btn-conections gmail"><i href="icon-gmail"></i></a>
         </div>
@@ -122,10 +121,26 @@
             <img src="../assets/logo-universidad-libre.jpg" alt="img-banco" class="footer-link-uni">
             </a>
         </div>
+        <div class="siguenos">
+            <h3 class="siguenos-text">siguenos:</h3>
+        </div>
         <div clas="social-icon-container">
-            <a href="" class="btn-conections facebook"><i href="#"></i></a>
-            <a href="" class="btn-conections twitter"><i href="#"></i></a>
-            <a href="" class="btn-conections gmail"><i href="#"></i></a>
+            <a href="" class="social-icon facebook">
+                <i href="#">
+                    <img src="../assets/iconfinder_fb_facebook_facebook logo_5305154.svg" alt="icon facebook" class="social-icon-fb">
+                </i>
+            </a>
+            <a href="" class="social-icon.instagram">
+                <i href="#">
+                    <img src="../assets/iconfinder_camera_instagram_social media_instagram logo_5279112.svg" alt="instagram icon" class="social-icon-ig">
+                </i>
+            </a>
+            <a href="" class="social-icon-twitter">
+                <i href="#">
+                    <img src="  " alt="twitter icon" class="social-icon-tw">
+                </i>
+            </a>
+            
         </div>
         <ul class="footer-menu-container">
             <li class="menu-item">legal</li>
