--- a/html/pag1.html
+++ b/html/pag1.html
@@ -58,6 +58,28 @@
         </div>
     </div>
 </main>
+<section class="contactanos">
+    <div class="contac-body">
+        <h2 class="contact-tittle">¿Como contactarnos?</h2>
+        <div class="contact-text">
+            <p>¡Únete al Laboratorio de Innovación Social escribiendo por medio de whatsapp o gmail y descubre todos los servicios que hay para tu empresa o fundación! Contáctanos a través de correo electrónico o WhatsApp y descubre cómo podemos ayudarte a impulsar tu organización hacia el éxito. ¡No pierdas la oportunidad de acceder a soluciones innovadoras y eficientes para abordar tus desafíos y alcanzar tus metas! Contáctanos ahora y comienza a beneficiarte de nuestro laboratorio de ideas y conocimientos. ¡Estamos ansiosos por trabajar contigo!</p>
+        </div>
+        <div class="conections">
+        <a href="https://api.whatsapp.com/send?phone=3115763645" class="btn-wsp" target="_blank"><!--el target="_blank" es para que cuando se oprima, salga a otra pagina-->
+            <i class="icon-whatsapp">
+                <img src="../assets/iconfinder_app_logo_media_popular_social_whatsapp_3225179.svg" alt="logo wsp" class="btn-wst">
+            </i>
+        </a>
+        <a href="mailto:sarita.salazar.u@mail.com">
+            <i class="icon-mail">
+                <img src="../assets/iconfinder_gmail_google_mail_1220340.svg" alt="logo gmail" class="btn-mail">
+            </i>
+        </a>
+        </div>
+        </div>
+    </div>
+
+</section>
 
     <br><br><br><br><br><br><br><br>
 </body>
