--- a/html/pag1.html
+++ b/html/pag1.html
@@ -55,9 +55,10 @@
             
              <img  src="../assets/img-principal.png" alt="imgP" class="principal-img-1">
 
-            
         </section>
     </div>
+    <img src="../assets/wave (4).svg" alt="division" class="wave wave_bottom">
+
 </main>
 
 
