--- a/html/index.html
+++ b/html/index.html
@@ -121,11 +121,28 @@
                 </i>
             </a>
             </div>
-            </div>
+            <p class="contactanos">Envíanos un correo</p>
+
+            <div class="formulario">
+                    <form method="post">
+                        <div class="name" id="name">
+                            <input type="text" required>
+                            <label>Nombre completo</label>
+                        </div>
+                        <div class="name" id="organization-name">
+                            <input type="text" required>
+                            <label>Nombre de la organización</label>
+                        </div>
+                        <div class="name" id="email">
+                            <input type="email" required>
+                            <label>Correo</label>
+                        </div>
+                        <input type="submit" value="Enviar">
+                    </form>
         </div>
 
     </section>
- 
+ <br><br><br><br><br><br><br><br><br><br>
 </body>
 <footer>
 
