--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
 
 <header class="header">
     <nav class="nav-header">
-        <a href="#" class="header-logo">
+        <a href="../html/index.html" class="header-logo">
             <img  src="../assets/Logo-icon-BAB.png" alt="logo" class="header-icon">
         </a>
         
@@ -53,7 +53,7 @@
 
         <p id="b-1">Apoyo en la postulación de proyectos y en el diseño de planes estratégicos para la viabilidad de los proyectos.</p>
 
-        <button class="btn-more" id="info-btn-inn">Más</button>
+        <a href="../html/pag1.html"><button class="btn-more" id="info-btn-inn">Más</button></a>
     </div>
         <!-- Página #2-->
     <div class="box-2"  id="box-2">
@@ -61,7 +61,7 @@
 
         <p id="b-2"> Formación en investigación, desarrollo tecnológico, innovación y creación artística y cultural.</p>
 
-        <button class="btn-more" id="info-btn-emp">Más</button>
+        <a href="../html/pag2.html"><button class="btn-more" id="info-btn-emp">Más</button></a>
     </div>
 
         <!-- Página #2-->
@@ -70,7 +70,7 @@
 
         <p id="b-3">Asesoría personalizada brindada de manera virtual o presencial entrelas cuales se brinda apoyo en la articulación de proyectos. </p>
 
-        <button class="btn-more" id="info-btn-Cons">Más</button>
+        <a href="../html/pag3.html"><button class="btn-more" id="info-btn-Cons">Más</button></a>
     </div>
 
     </main>
