--- a/html/pag1.html
+++ b/html/pag1.html
@@ -15,7 +15,7 @@
 
 <header class="header">
     <nav class="nav-header">
-        <a href="#" class="header-logo">
+        <a href="../html/index.html" class="header-logo">
             <img  src="../assets/Logo-icon-BAB.png" alt="logo" class="header-icon">
         </a>
         
