--- a/html/index.html
+++ b/html/index.html
@@ -21,10 +21,10 @@
         
         <div>
         <ul class="menu">
-            <li><a herf="#conocer">Conocenos</a></li>
+            <li><a herf="#conocer" class="selected">Conocenos</a></li>
             <li><a href="#service"></a>Servicios</a></li>
             <li><a href="#achieve"></a>Como lo logramos</a></li>
-            <li><a href="#contact"></a>Contactanos</a></li>
+            <li><a href="#contact" class="selected"></a>Contactanos</a></li>
         </ul>
         </div>
         <!--<h2 href="" id="lista1">Nosotros</h2> 
@@ -35,7 +35,7 @@
     <br><br><br><br><br>
 
 <main class="initial-info">
-        <div class="initial-info-div">
+        <div class="initial-info-div" id="conocer">
             <div class="initial-info-portada">
                 <h1>Laboratorio de Innovación Social</h1>
                 <a href="#" class="principal-img">
@@ -66,16 +66,16 @@
 
         <!-- Página #2-->
     <div class="box-3" id="box-3">
-        <h3>Asesoría</h3>
+        <h3>Asesoría y Apoyo Creativo</h3>
 
-        <p id="b-3">Asesoría personalizada brindada de manera virtual o presencial entrelas cuales se brinda apoyo en la articulación de proyectos. </p>
+        <p id="b-3">Asesoría personalizada virtual o presencial para la resolución de dudas y apoyo en la creación de material publicitario. </p>
 
         <a href="../html/pag3.html"><button class="btn-more" id="info-btn-Cons">Más</button></a>
     </div>
 
     </main>
     <!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
-    <section class="logramos">
+    <section class="logramos" id="achieve">
         <img src="../assets/wave.svg" alt="division" class="wave">
         <div class="logramos-body">
             <h2 class="logramos-tittle">¿Como lo lográmos?</h2>
@@ -103,7 +103,8 @@
         </div>    
         <img src="../assets/wave (4).svg" alt="division" class="wave wave_bottom">
     </section>
-    <section class="contactanos">
+
+    <section class="contactanos" id="contact">
         <div class="contac-body">
             <h2 class="contact-tittle">¿Como contactarnos?</h2>
             <div class="contact-text">
