--- a/html/pag2.html
+++ b/html/pag2.html
@@ -34,7 +34,9 @@
     <div class="principal-info-2-div">
         <div class="principal-info-2-portada">
             <h1>Formación</h1>
-            <p class="principal-text-2">Desde los conococimientos de nuestro estudiantes y voluntarios, se dará una formación e instrucción durante el proceso de aprendizaje para realizar proyectos o desarrollar ideas de innovación en campos como lo son: investigación, desarrollo tecnológico, innovación y creación artística y cultural.</p>
+            <p class="principal-text-2">Nuestro equipo se propone el ofrecer formación y capacitación integral durante todo el proceso de aprendizaje. Estamos comprometidos en brindar las herramientas y conocimientos necesarios para realizar proyectos exitosos y desarrollar ideas innovadoras en diversos campos.
+                <br>
+                Nuestra formación se enfoca en áreas clave como la investigación, el desarrollo tecnológico, la innovación y la creación artística y cultural. </p>
         </div>    
     |</div>
 </main>
@@ -45,10 +47,12 @@
         <div class="list-2">
             <h2 class="temas-2">Temas</h2><br>
             <ul class="list-container-2">
-                <li class="info-item-2"><strong>Asesoría personalizada:</strong></li>
-                    <p class="text-item-2">Asesoría y capacitación en conocimientos de áreas como investigación, desarrollo tecnológico, innovación y creación artística y cultural para la correcta organización y postulación de ideas para la organización, ya sea vía whatsapp o de manera presencial.</p>
+                <li class="info-item-2"><strong>Consejería y Formación:</strong></li>
+                    <p class="text-item-2">Ofrecemos formación y consejería en áreas clave como investigación, desarrollo tecnológico, innovación y creación artística y cultural. Nuestro objetivo es brindar el conocimiento y las herramientas necesarias para una organización exitosa y una adecuada postulación de ideas. </p>
+                <li class="info-item-2"><strong>Guía y Acompañamiento:</strong></li>
+                    <p class="text-item-2">No solo nos límitamos al proceso de aprendizaje ya que tambien bridamos una breve guía y seguimiento en la implementación de estos conocimientos en tus proyectos. </p>   
                 <li class="info-item-2"><strong>Acompañamiento en problemas de innovación:</strong></li>
-                    <p class="text-item-2">Asesoría y capacitación en la resolución de problemas de innovación y la realización de planes estratégicos.</p>
+                    <p class="text-item-2">Además de nuestra formación y consejería en áreas como investigación, desarrollo tecnológico, innovación y creación artística y cultural, también brindamos asesoría y capacitación especializada en la resolución de problemas de innovación y la realización de planes estratégicos.</p>
                 <!--<li class="info-item-2"><strong>Analisis de viabilidad y planeación:</strong></li>
                 <p class="text-item-2">Diseño de planes estratégicos por medio de simuladores para la viabilidad de los proyectos de la organización.</p>
                 -->
