--- a/html/pag3.html
+++ b/html/pag3.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="../styles/basic.css">
     <link rel="stylesheet" href="../styles/pag3.css">
-    <title>LISBAB - Asesoría</title>
+    <title>LISBAB - Asesoría y Apoyo Creativo</title>
     <link rel="icon" href="../assets/banco-de-alimentos-bogota.png">
 </head>
 <body>
@@ -33,8 +33,10 @@
 <main class="principal-info-3">
     <div class="principal-info-3-div">
         <div class="principal-info-3-portada">
-            <h1>Emprendimiento y Planeación</h1>
-            <p class="principal-text-3">Las organizaciones donantes al Banco de Alimentos que tengan problemas de innovación y organización en la postulación de nuevos emprendimientos, pueden contar con la ayuda de asesorías dedicadas al desarrollo de soluciones especificas para cada organización, a la guía dedicada a la planeación de proyectos, su postulación y al correcto proceso de postulación de proyectos.</p>
+            <h1>Asesoría y Apoyo Creativo</h1>
+            <p class="principal-text-3">Nuestros estudiantes y voluntarios estarán brindando apoyo y asesoría personalizada a las organizaciones vinculadas al Banco de Alimentos. Esta asistencia se llevará a cabo de manera virtual a través de WhatsApp o de forma presencial, previa coordinación de una visita a la organización. Nuestro objetivo es capacitar y asesorar a las organizaciones en el área que sea solicitada.
+                <br>
+                Además, ofrecemos apoyo y consejería en la creación de material publicitario, como flyers, folletos y gestión de redes sociales, entre otros aspectos relacionados. Estaremos encantados de ayudar a las organizaciones en todas estas áreas para promover su labor y difundir su mensaje.</p>
         </div>    
     |</div>
 </main>
@@ -45,12 +47,12 @@
         <div class="list-3">
             <h2 class="temas-3">Temas</h2><br>
             <ul class="list-container-3">
-                <li class="info-item-3"><strong>Postulación de proyectos:</strong></li>
-                    <p class="text-item-3">Asesoría y acompañamento para la correcta organización y postulación de proyectos.</p>
-                <li class="info-item-3"><strong>Acompañamiento en problemas de innovación:</strong></li>
-                    <p class="text-item-3">Creación y paneación de soluciones en los problemas de innovación que pueda poseer la organización.</p>
-                <li class="info-item-3"><strong>Analisis de viabilidad y planeación:</strong></li>
-                <p class="text-item-3">Diseño de planes estratégicos por medio de simuladores para la viabilidad de los proyectos de la organización.</p>
+                <li class="info-item-3"><strong>Asesoría en línea:</strong></li>
+                    <p class="text-item-3">Asesoría y consejería de manera virtual por medio de whatsapp adaptado a las necesidades de tu organización. Nuestro equipo está listo para brindarte apoyo y consejería en el área específica en la que requieras ayuda.</p>
+                <li class="info-item-3"><strong>Asesoría presencial:</strong></li>
+                    <p class="text-item-3">Nuestro equipo ofrecerá asesoría y consejería de manera presencial, directamente en la organización. Para ello, se coordinará previamente una cita con el fin de identificar las necesidades específicas de la organización y así tener una visión más clara de la asesoría que se brindará.</p>
+                <li class="info-item-3"><strong>Apoyo Creativo:</strong></li>
+                <p class="text-item-3">Ofrecemos apoyo y asesoría en la creación adecuada de material publicitario para tu empresa como lo son el diseño de flyers, cartillas, afiches publicitarios, entre otros, así como tambien en la consejería para el manejo estratégico de redes sociales.</p>
 
             </ul>
         </div>           
