--- a/html/index.html
+++ b/html/index.html
@@ -16,15 +16,15 @@
 <header class="header">
     <nav class="nav-header">
         <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/Logo-icon-BAB.png" alt="logo" class="header-icon">
+            <img  src="../assets/Logo BAB - letra blanca png.png" alt="logo" class="header-icon">
         </a>
         
         <div>
         <ul class="menu">
-            <li><a herf="#conocer" class="selected">Conocenos</a></li>
-            <li><a href="#service"></a>Servicios</a></li>
-            <li><a href="#achieve"></a>Como lo logramos</a></li>
-            <li><a href="#contact" class="selected"></a>Contactanos</a></li>
+            <li><a herf="#conocer">Conocenos</a></li>
+            <li><a href="#service">Servicios</a></li>
+            <li><a href="#achieve">Como lo logramos</a></li>
+            <li><a href="#contact">Contactanos</a></li>
         </ul>
         </div>
         <!--<h2 href="" id="lista1">Nosotros</h2> 
@@ -32,10 +32,10 @@
     </nav>
 </header>
 
-    <br><br><br><br><br>
+    <br><br><br><br>
 
-<main class="initial-info">
-        <div class="initial-info-div" id="conocer">
+<main class="initial-info" id="conocer">
+        <div class="initial-info-div" >
             <div class="initial-info-portada">
                 <h1>Laboratorio de Innovación Social</h1>
                 <a href="#" class="principal-img">
@@ -57,7 +57,7 @@
     </div>
         <!-- Página #2-->
     <div class="box-2"  id="box-2">
-        <h3>Formación</h3>
+        <h3 id="service">Formación</h3>
 
         <p id="b-2"> Formación en investigación, desarrollo tecnológico, innovación y creación artística y cultural.</p>
 
@@ -76,8 +76,8 @@
     </main>
     <!--<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>-->
     <section class="logramos" id="achieve">
-        <img src="../assets/wave.svg" alt="division" class="wave">
-        <div class="logramos-body">
+        <img src="../assets/wave.svg" alt="division" class="wave" >
+        <div class="logramos-body" >
             <h2 class="logramos-tittle">¿Como lo lográmos?</h2>
             <div class="logramos-text">
                 <p> En colaboración con la Universidad Libre de Colombia, el Banco Arquidiocesano de Alimentos de Bogotá se une a un emocionante proyecto: el Laboratorio de Innovación Social. ¿Qué significa esto? Es nuestra estrategia clave para generar un impacto aún mayor en las comunidades que atendemos.
