--- a/html/pag2.html
+++ b/html/pag2.html
@@ -22,7 +22,7 @@
         <div>
         <ul class="menu">
             <li><a herf="#conocer">Conocenos</a></li>
-            <li><a href="#service"></a>Servicios</a></li>
+            <li><a href="#service">Servicios</a></li>
             <li><a href="#achieve"></a>Como lo logramos</a></li>
             <li><a href="#contact"></a>Contactanos</a></li>
         </ul>
