--- a/html/pag3.html
+++ b/html/pag3.html
@@ -24,7 +24,7 @@
             <li><a herf="#conocer">Conocenos</a></li>
             <li><a href="#service"></a>Servicios</a></li>
             <li><a href="#achieve"></a>Como lo logramos</a></li>
-            <li><a href="#contact"></a>Contactanos</a></li>
+            <li><a href=".wave"></a>Contactanos</a></li>
         </ul>
         </div>
     </nav>
@@ -67,7 +67,7 @@
 
 
 
-<section class="contactanos">
+<section class="contactanos" id="contact">
     <div class="contac-body">
         <h2 class="contact-tittle">¿Como contactarnos?</h2>
         <div class="contact-text">
