--- a/html/index.html
+++ b/html/index.html
@@ -21,7 +21,7 @@
         
         <div>
         <ul class="menu">
-            <li><a herf="#conocer">Conocenos</a></li>
+            <li><a href="#know">Conocer</a></li>
             <li><a href="#service">Servicios</a></li>
             <li><a href="#achieve">Como lo logramos</a></li>
             <li><a href="#contact">Contactanos</a></li>
@@ -34,7 +34,7 @@
 
     <br><br><br><br>
 
-<main class="initial-info" id="conocer">
+<main class="initial-info" id="know">
         <div class="initial-info-div" >
             <div class="initial-info-portada">
                 <h1>Laboratorio de Innovación Social</h1>
@@ -122,7 +122,9 @@
                 </i>
             </a>
             </div>
-            <p class="contactanos">Envíanos un correo</p>
+            <p class="contactanos">O
+                <br><br>Envíanos tu pregunta</p>
+                <br><br><br>
 
             <div class="formulario">
                     <form method="post">
@@ -151,7 +153,7 @@
 </body>
 <footer>
 
-    <div class="footer-body">
+    <div class="footer-body" >
         <div class="footer-banco">
                 <a href="https://www.bancodealimentos.org.co/" class="-footer-banco-icon">
                 <img src="../assets/Logo-icon-BAB.png" alt="img-banco" class="footer-link-banco">
