--- a/html/pag3.html
+++ b/html/pag3.html
@@ -16,7 +16,7 @@
 <header class="header">
     <nav class="nav-header">
         <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/Logo-icon-BAB.png" alt="logo" class="header-icon">
+            <img  src="../assets/Logo BAB - letra blanca png.png" alt="logo" class="header-icon">
         </a>
         
         <div>
