--- a/html/pag3.html
+++ b/html/pag3.html
@@ -21,16 +21,15 @@
         
         <div>
         <ul class="menu">
-            <li><a herf="#conocer">Conocenos</a></li>
-            <li><a href="#service"></a>Servicios</a></li>
-            <li><a href="#achieve"></a>Como lo logramos</a></li>
-            <li><a href=".wave"></a>Contactanos</a></li>
+            <li><a href="#service"></a>Servicio</a></li>
+            <li><a href="#topic">Temas</a></li>
+            <li><a href="#contact"></a>Contactanos</a></li>
         </ul>
         </div>
     </nav>
 </header>
 <br><br><br><br><br><br>
-<main class="principal-info-3">
+<main class="principal-info-3" id="service">
     <div class="principal-info-3-div">
         <div class="principal-info-3-portada">
             <h1>Asesoría y Apoyo Creativo</h1>
@@ -42,7 +41,7 @@
 </main>
     <div class="wave-3">
     <img src="../assets/wave.svg" alt="division" class="wave">
-<section class="second-info-3">
+<section class="second-info-3" id="topic">
             
         <div class="list-3">
             <h2 class="temas-3">Temas</h2><br>
@@ -67,7 +66,7 @@
 
 
 
-<section class="contactanos" id="contact">
+<section class="contactanos" id="contact" id="contact">
     <div class="contac-body">
         <h2 class="contact-tittle">¿Como contactarnos?</h2>
         <div class="contact-text">
