--- a/html/pag1.html
+++ b/html/pag1.html
@@ -21,17 +21,16 @@
         
         <div>
         <ul class="menu">
-            <li><a herf="#conocer">Conocenos</a></li>
-            <li><a href="#service"></a>Servicios</a></li>
-            <li><a href="#achieve"></a>Como lo logramos</a></li>
-            <li><a href="#contact"></a>Contactanos</a></li>
+            <li><a href="#service">Servicio</a></li>           
+            <li><a href="#topic">Temas</a></li>
+            <li><a href="#contact">Contactanos</a></li>
         </ul>
         </div>
     </nav>
 </header>
 <br><br><br><br><br><br>
 <main class="principal-info-1">
-    <div class="principal-info-1-div">
+    <div class="principal-info-1-div" id="service">
         <div class="principal-info-1-portada">
             <h1>Emprendimiento y Planeación</h1>
             <p class="principal-text-1">Las organizaciones donantes al Banco de Alimentos que tengan problemas de innovación y organización en la postulación de nuevos emprendimientos, pueden contar con la ayuda de asesorías dedicadas al desarrollo de soluciones especificas para cada organización, a la guía dedicada a la planeación de proyectos, su postulación y al correcto proceso de postulación de proyectos.</p>
@@ -40,7 +39,7 @@
 </main>
     <div class="wave-1">
     <img src="../assets/wave.svg" alt="division" class="wave">
-<section class="second-info-1">
+<section class="second-info-1" id="topic" >
             
         <div class="list-1">
             <h2 class="temas-1">Temas</h2><br>
@@ -65,7 +64,7 @@
 
 
 
-<section class="contactanos">
+<section class="contactanos" id="contact">
     <div class="contac-body">
         <h2 class="contact-tittle">¿Como contactarnos?</h2>
         <div class="contact-text">
