--- a/html/pag2.html
+++ b/html/pag2.html
@@ -21,16 +21,15 @@
         
         <div>
         <ul class="menu">
-            <li><a herf="#conocer">Conocenos</a></li>
-            <li><a href="#service">Servicios</a></li>
-            <li><a href="#achieve"></a>Como lo logramos</a></li>
+            <li><a href="#service"></a>Servicio</a></li>
+            <li><a href="#topic">Temas</a></li>
             <li><a href="#contact"></a>Contactanos</a></li>
         </ul>
         </div>
     </nav>
 </header>
 <br><br><br><br><br><br>
-<main class="principal-info-2">
+<main class="principal-info-2" id="service" >
     <div class="principal-info-2-div">
         <div class="principal-info-2-portada">
             <h1>Formación</h1>
@@ -42,7 +41,7 @@
 </main>
     <div class="wave-2">
     <img src="../assets/wave.svg" alt="division" class="wave">
-<section class="second-info-2">
+<section class="second-info-2" id="topic">
     <img  src="../assets/img-principal.png" alt="imgP" class="principal-img-2">
         <div class="list-2">
             <h2 class="temas-2">Temas</h2><br>
@@ -67,7 +66,7 @@
 
 
 
-<section class="contactanos">
+<section class="contactanos" id="contact">
     <div class="contac-body">
         <h2 class="contact-tittle">¿Como contactarnos?</h2>
         <div class="contact-text">
