--- a/html/pag2.html
+++ b/html/pag2.html
@@ -21,15 +21,15 @@
         
         <div>
         <ul class="menu">
-            <li><a href="#service"></a>Servicio</a></li>
+            <li><a href="#service">Servicio</a></li>
             <li><a href="#topic">Temas</a></li>
-            <li><a href="#contact"></a>Contactanos</a></li>
+            <li><a href="#contact">Contactanos</a></li>
         </ul>
         </div>
     </nav>
 </header>
 <br><br><br><br><br><br>
-<main class="principal-info-2" id="service" >
+<main class="principal-info-2" id="service">
     <div class="principal-info-2-div">
         <div class="principal-info-2-portada">
             <h1>Formación</h1>
@@ -41,7 +41,7 @@
 </main>
     <div class="wave-2">
     <img src="../assets/wave.svg" alt="division" class="wave">
-<section class="second-info-2" id="topic">
+<section class="second-info-2"id="topic">
     <img  src="../assets/img-principal.png" alt="imgP" class="principal-img-2">
         <div class="list-2">
             <h2 class="temas-2">Temas</h2><br>
