--- a/html/pag3.html
+++ b/html/pag3.html
@@ -66,7 +66,7 @@
 
 
 
-<section class="contactanos" id="contact" id="contact">
+<section class="contactanos" id="contact">
     <div class="contac-body">
         <h2 class="contact-tittle">¿Como contactarnos?</h2>
         <div class="contact-text">
