--- a/html/index.html
+++ b/html/index.html
@@ -96,7 +96,7 @@
                 </a>
             </div>
         <div class="seccion-uni">
-            <a href="https://www.unilibre.edu.co/" class="uni-icon">
+            <a href="#" class="uni-icon">
             <img src="../assets/1200px-Escudo_de_la_Universidad_Libre_de_Colombia.svg.png" alt="img-banco" class="link-uni">
             </a>
         </div>
