--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 <header class="header">
     <nav class="nav-header">
         <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/Logo BAB - letra blanca png.png" alt="logo" class="header-icon">
+            <img  src="../assets/logo.jpeg" alt="logo" class="header-icon">
         </a>
         
         <div>
@@ -32,7 +32,7 @@
     </nav>
 </header>
 
-    <br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
 
 <main class="initial-info" id="know">
         <div class="initial-info-div" >
@@ -128,6 +128,7 @@
 
             <div class="formulario">
                     <form method="post">
+                        <img src="../assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="" class="logo-form">
                         <div class="name" id="name">
                             <input type="text" required>
                             <label>Nombre completo</label>
@@ -140,6 +141,12 @@
                             <input type="email" required>
                             <label>Correo</label>
                         </div>
+                        <label id="lista-label">¿Está su organización vinculada al Banco de Alimentos de Bogotá?</label>
+                        <select for="vinculado" id="lista" required>
+                            <option value="nada" select="selected">-</option>
+                            <option value="yes">Si, estoy vinculado al Banco de Alimentos</option>
+                            <option value="No">No, no estoy vínculado al Banco de Alimentos</option>
+                        </select>
                         <div class="name" id="question">
                             <input type="text" required>
                             <label>Mensaje</label>
