--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
             <div class="initial-info-portada">
                 <h1>Laboratorio de Innovación Social</h1>
                 <a href="#" class="principal-img">
-                <img  src="../assets/img-principal.png " alt="imgP" class="principal-img">
+                <img  src="../assets/Imagen1.png" alt="imgP" class="principal-img">
                 </a>
                 <p class="initial-text">Descubre el Laboratorio de Innovación Social y potencia el impacto de tu empresa o fundación beneficiaria del Banco de Alimentos. Apoyamos iniciativas innovadoras y estratégicas con un enfoque social y sostenible. Juntos, generamos soluciones para mejorar la vida de la población. Conoce nuestros servicios y únete a nosotros para hacer la diferencia. 
                     <br>¡Conócenos y sé parte del cambio!</p>
@@ -128,7 +128,6 @@
 
             <div class="formulario">
                     <form method="post">
-                        <img src="../assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="" class="logo-form">
                         <div class="name" id="name">
                             <input type="text" required>
                             <label>Nombre completo</label>
