--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 <header class="header">
     <nav class="nav-header">
         <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/logo.jpeg" alt="logo" class="header-icon">
+            <img  src="../assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="logo" class="header-icon">
         </a>
         
         <div>
@@ -32,7 +32,7 @@
     </nav>
 </header>
 
-    <br><br><br><br><br>
+    <br><br><br><br>
 
 <main class="initial-info" id="know">
         <div class="initial-info-div" >
