--- a/html/index.html
+++ b/html/index.html
@@ -108,7 +108,21 @@
         <div class="contac-body">
             <h2 class="contact-tittle">¿Como contactarnos?</h2>
             <div class="contact-text">
-                <p>¡Únete al Laboratorio de Innovación Social escribiendo por medio de whatsapp o gmail y descubre todos los servicios que hay para tu empresa o fundación! Contáctanos a través de correo electrónico o WhatsApp y descubre cómo podemos ayudarte a impulsar tu organización hacia el éxito. ¡No pierdas la oportunidad de acceder a soluciones innovadoras y eficientes para abordar tus desafíos y alcanzar tus metas! Contáctanos ahora y comienza a beneficiarte de nuestro laboratorio de ideas y conocimientos. ¡Estamos ansiosos por trabajar contigo!</p>
+                <p>¡Únete al Laboratorio de Innovación Social escribiendo por medio de whatsapp o gmail y descubre todos los servicios que hay para tu empresa o fundación!</p>
+            </div>
+            <div class="contact-box-1"  id="contact-box-1">
+                <h3 id="t-contact-1">¿Ya estás vinculado?</h3>
+                <p id="contact-b-1">Si tu organización ya es donante del Banco de Alimentos, te invitamos a ponerte en contacto con nosotros a través de correo electrónico o WhatsApp. También puedes completar el formulario a continuación con los datos de tu organización y tus preguntas confirmando que eres donante del Banco de Alimentos para que podamos comunicarnos contigo. Descubre cómo podemos ayudarte a impulsar el éxito de tu organización.
+                    <br>
+                    ¡No pierdas la oportunidad de acceder a soluciones innovadoras y eficientes para abordar tus desafíos y alcanzar tus metas! Contáctanos ahora y comienza a beneficiarte de nuestro laboratorio de ideas y conocimientos. ¡Estamos ansiosos por trabajar contigo.</p>
+        
+            </div>
+            <div class="contact-box-2"  id="contact-box-2">
+                <h3 id="t-contact-2">¿Aún no haces parte?</h3>
+                <p id="contact-b-2">Si aún no estás vinculado al Banco de Alimentos y estás interesado en formar parte de nuestro equipo y adquirir nuestros servicios, te invitamos a enviarnos tus preguntas a través de correo electrónico o WhatsApp. También puedes completar el formulario a continuación con los datos de tu organización y tus consultas, indicando que aún no estás vinculado al Banco de Alimentos, para que podamos comunicarnos contigo.  
+                    <br>
+                    ¡No pierdas la oportunidad de descubrir las oportunidades que el Laboratorio de Innovación Social tiene para tu organización! Estamos preparados para trabajar contigo y ayudarte a alcanzar tus objetivos. </p>
+        
             </div>
             <div class="conections">
             <a href="https://api.whatsapp.com/send?phone=3115763645" class="btn-wsp" target="_blank"><!--el target="_blank" es para que cuando se oprima, salga a otra pagina-->
