--- a/html/pag2.html
+++ b/html/pag2.html
@@ -16,7 +16,7 @@
 <header class="header">
     <nav class="nav-header">
         <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/Logo BAB - letra blanca png.png" alt="logo" class="header-icon">
+            <img  src="../assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="logo" class="header-icon">
         </a>
         
         <div>
