--- a/html/pag3.html
+++ b/html/pag3.html
@@ -16,14 +16,14 @@
 <header class="header">
     <nav class="nav-header">
         <a href="../html/index.html" class="header-logo">
-            <img  src="../assets/Logo BAB - letra blanca png.png" alt="logo" class="header-icon">
+            <img  src="../assets/WhatsApp Image 2023-06-26 at 4.57.51 PM.jpeg" alt="logo" class="header-icon">
         </a>
         
         <div>
         <ul class="menu">
-            <li><a href="#service"></a>Servicio</a></li>
+            <li><a href="#service">Servicio</a></li>
             <li><a href="#topic">Temas</a></li>
-            <li><a href="#contact"></a>Contactanos</a></li>
+            <li><a href="#contact">Contactanos</a></li>
         </ul>
         </div>
     </nav>
