--- a/html/pag1.html
+++ b/html/pag1.html
@@ -54,7 +54,7 @@
             </ul>
         </div>           
             
-             <img  src="../assets/img-principal.png" alt="imgP" class="principal-img-1">
+             <img  src="../assets/pag1.jpeg" alt="imgP" class="principal-img-1">
 
 </section>
         
