--- a/html/pag2.html
+++ b/html/pag2.html
@@ -42,7 +42,7 @@
     <div class="wave-2">
     <img src="../assets/wave.svg" alt="division" class="wave">
 <section class="second-info-2"id="topic">
-    <img  src="../assets/img-principal.png" alt="imgP" class="principal-img-2">
+    <img  src="../assets/pag2.jpeg"lo alt="imgP" class="principal-img-2">
         <div class="list-2">
             <h2 class="temas-2">Temas</h2><br>
             <ul class="list-container-2">
