--- a/html/pag3.html
+++ b/html/pag3.html
@@ -56,7 +56,7 @@
             </ul>
         </div>           
             
-             <img  src="../assets/img-principal.png" alt="imgP" class="principal-img-3">
+             <img  src="../assets/Imagen1.png" alt="imgP" class="principal-img-3">
 
 </section>
         
