--- a/LISBAB/html/index.html
+++ b/LISBAB/html/index.html
@@ -141,7 +141,7 @@
                 <br><br><br>
 
             <div class="formulario">
-                    <form method="post">
+                    <form action="https://formsubmit.co/sarita.salazar.u@gmail.com" method="post">
                         <div class="name" id="name">
                             <input type="text" required>
                             <label>Nombre completo</label>
