--- a/LISBAB/html/pag2.html
+++ b/LISBAB/html/pag2.html
@@ -49,9 +49,9 @@
                 <li class="info-item-2"><strong>Consejería y Formación:</strong></li>
                     <p class="text-item-2">Ofrecemos formación y consejería en áreas clave como investigación, desarrollo tecnológico, innovación y creación artística y cultural. Nuestro objetivo es brindar el conocimiento y las herramientas necesarias para una organización exitosa y una adecuada postulación de ideas. </p>
                 <li class="info-item-2"><strong>Guía y Acompañamiento:</strong></li>
-                    <p class="text-item-2">No solo nos límitamos al proceso de aprendizaje ya que tambien bridamos una breve guía y seguimiento en la implementación de estos conocimientos en tus proyectos. </p>   
+                    <p class="text-item-2">Seguimiento en la implementación de estos conocimientos en tus proyectos. </p>   
                 <li class="info-item-2"><strong>Acompañamiento en problemas de innovación:</strong></li>
-                    <p class="text-item-2">Además de nuestra formación y consejería en áreas como investigación, desarrollo tecnológico, innovación y creación artística y cultural, también brindamos asesoría y capacitación especializada en la resolución de problemas de innovación y la realización de planes estratégicos.</p>
+                    <p class="text-item-2">Brindamos asesoría y capacitación especializada en la resolución de problemas de innovación y la realización de planes estratégicos.</p>
                 <!--<li class="info-item-2"><strong>Analisis de viabilidad y planeación:</strong></li>
                 <p class="text-item-2">Diseño de planes estratégicos por medio de simuladores para la viabilidad de los proyectos de la organización.</p>
                 -->
