--- a/LISBAB/html/pag3.html
+++ b/LISBAB/html/pag3.html
@@ -51,7 +51,7 @@
                 <li class="info-item-3"><strong>Asesoría presencial:</strong></li>
                     <p class="text-item-3">Nuestro equipo ofrecerá asesoría y consejería de manera presencial, directamente en la organización. Para ello, se coordinará previamente una cita con el fin de identificar las necesidades específicas de la organización y así tener una visión más clara de la asesoría que se brindará.</p>
                 <li class="info-item-3"><strong>Apoyo Creativo:</strong></li>
-                <p class="text-item-3">Ofrecemos apoyo y asesoría en la creación adecuada de material publicitario para tu empresa como lo son el diseño de flyers, cartillas, afiches publicitarios, entre otros, así como tambien en la consejería para el manejo estratégico de redes sociales.</p>
+                <p class="text-item-3">Ofrecemos apoyo y asesoría en la creación adecuada de material publicitario para tu empresa como lo son el diseño de flyers, cartillas, afiches publicitarios, entre otros, así como tambien en la consejería para el manejo estratégico de redes sociales y la realización de talleres.</p>
 
             </ul>
         </div>           
