--- a/LISBAB/html/pag1.html
+++ b/LISBAB/html/pag1.html
@@ -33,7 +33,7 @@
     <div class="principal-info-1-div" id="service">
         <div class="principal-info-1-portada">
             <h1>Emprendimiento y Planeación</h1>
-            <p class="principal-text-1">Las organizaciones donantes al Banco de Alimentos que tengan problemas de innovación y organización en la postulación de nuevos emprendimientos, pueden contar con la ayuda de asesorías dedicadas al desarrollo de soluciones especificas para cada organización, a la guía dedicada a la planeación de proyectos, su postulación y al correcto proceso de postulación de proyectos.</p>
+            <p class="principal-text-1">Las organizaciones donantes al Banco de Alimentos que tengan problemas de innovación y organización en la postulación de nuevos emprendimientos, pueden contar con la ayuda de asesorías dedicadas al desarrollo de soluciones especificas para cada organización, a la guía dedicada a la planeación de proyectos, su postulación, al acompañamiento en problemas de innovación y en la realización de anaslisis de viabilidad y planeación anterior a la implementación.</p>
         </div>    
     |</div>
 </main>
