--- a/LISBAB/html/index.html
+++ b/LISBAB/html/index.html
@@ -263,7 +263,7 @@
             
         </div>
 
-        <!-- Lista de información del banco de alimentos-->
+        <!-- Lista de información del banco de alo-->
         <div class="link-list">
         <ul class="footer-menu-container">
             <li class="footer-item">Calle 19 A # 32 – 50</li>
